--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -13,8 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Force Xcode 11
-      run: sudo xcode-select -switch /Applications/Xcode_11.5.app
+    - name: Init Lib
+      run: swift package init --type library
     - name: Build
       run: swift build -v
     - name: Run tests
